--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build" : "cd client && npm run build",
+    "install-client" : "cd client && npm install",
+    "heroku-postbuild" : "npm run install-client && npm run build",
     "server": "nodemon index.js",
     "client": "npm run start --prefix client",
     "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
